--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -49,7 +49,7 @@ body {
     display: flex;
     align-items: center;
     flex-shrink: 0;
-    max-width: 200px;
+    max-width: 250px;
     height: 100%;
     padding: 10px 0;
     margin-right: auto;
@@ -1392,6 +1392,4 @@ body {
     .checkbox-group {
         grid-template-columns: 1fr;
     }
-} / *   C A C H E   B U S T E R   -   F O R C E   R E F R E S H   * / 
- 
- 
+}
