--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,7 +53,10 @@ body {
     height: 100%;
     padding: 10px 0;
     margin: 0;
-    margin-right: auto;
+    position: absolute;
+    left: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .nav-logo img {
@@ -79,7 +82,10 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    margin-left: auto;
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .nav-menu a {
