--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -38,11 +38,10 @@ body {
     margin: 0;
     padding: 0 20px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: center;
     height: 100%;
     flex-wrap: wrap;
-    position: relative;
 }
 
 .nav-logo {
@@ -53,10 +52,6 @@ body {
     height: 100%;
     padding: 10px 0;
     margin: 0;
-    position: absolute;
-    left: 20px;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .nav-logo img {
@@ -82,10 +77,6 @@ body {
     align-items: center;
     margin: 0;
     padding: 0;
-    position: absolute;
-    right: 20px;
-    top: 50%;
-    transform: translateY(-50%);
 }
 
 .nav-menu a {
@@ -1319,11 +1310,17 @@ body {
 /* Responsive Design */
 @media (max-width: 768px) {
     .nav-menu {
-        display: none;
+        display: flex;
+        position: absolute;
+        right: 10px;
+        top: 50%;
+        transform: translateY(-50%);
+        gap: 1rem;
+        font-size: 0.9rem;
     }
     
     .nav-toggle {
-        display: flex;
+        display: none;
     }
     
     .hero-container {
